--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "lint:js": "eslint .",
     "lint:css": "stylelint \"blocks/**/*.css\" \"styles/*.css\"",
-    "lint": "npm run lint:js && npm run lint:css",
-    "news-index": "node ./tools/nwes-indexer.js"
+    "lint": "npm run lint:js && npm run lint:css"
   },
   "repository": {
     "type": "git",
