--- a/fstab.yaml
+++ b/fstab.yaml
@@ -1,2 +1,3 @@
 mountpoints:
   /: https://drive.google.com/drive/u/1/folders/1xP0vjLuEz4i0ivVV87exkd3hS0JraGDN
+  /news: https://drive.google.com/drive/u/1/folders/1hAZiGrAGQDDZfhPLWfVyi6htjqspkFq
